--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "andreynaldoni.com",
-  "homepage": "http://andreynaldoni.github.io/andreynaldoni.com",
+  "homepage": "http://andreynaldoni.com",
   "author": "Andrey Naldoni <andreynaldoni@gmail.com>",
   "version": "1.0.0",
   "private": true,
@@ -30,7 +30,7 @@
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "echo 'andreynaldoni.com' > ./build/CNAME && gh-pages -d build",
-    "build": "react-scripts build && cp build/index.html build/404.html",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
