--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,17 +5,21 @@
     "Andrey",
     "andreynaldoni",
     "Bematech",
+    "Fastify",
     "firefox",
+    "Harpio",
     "Linkedin",
     "mantine",
     "naldoni",
     "Naldoni",
     "navbutton",
     "Parens",
+    "precommit",
     "predeploy",
     "tabler",
     "Whatsapp"
   ],
+  "editor.codeActionsOnSave": ["source.formatDocument", "source.fixAll.eslint"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.formatOnSave": true
+  "editor.formatOnSave": false
 }
